--- a/index.html
+++ b/index.html
@@ -50,5 +50,11 @@
     </div>
 </nav>
 <!-- nav-common-end -->
+<section class="home-main">
+
+</section>
+<section class="home-discover">
+    
+</section>
 </body>
 </html>
