--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <li><a href="e-store.html">E-Store</a></li>
           <li><a href="vivo-exclusive-store.html">vivo Exclusive store</a></li>
           <li><a href="community.html">Community</a></li>
-          <li><a href="support.html">./krishna/support.html</a></li>
+          <li><a href="./krishna/support.html">Support</a></li>
           <li><a href="funtouch-os.html">Funtouch OS</a></li>
           <li><a href="explore-vivo.html">Explore vivo</a></li>
           <li><a href="index.html">iQOO</a></li>
