--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="products.html">Products</a></li>
           <li><a href="e-store.html">E-Store</a></li>
-          <li><a href="vivo-exclusive-store.html">vivo Exclusive store</a></li>
+          <li><a href="./01Muzammil/vivo-exclusive-store/vivo-exclusive.html">vivo Exclusive store</a></li>
           <li><a href="community.html">Community</a></li>
           <li><a href="./krishna/support.html">Support</a></li>
           <li><a href="funtouch-os.html">Funtouch OS</a></li>
