update html and css about vivo

--- a/suvansh/index.html
+++ b/suvansh/index.html
@@ -4,162 +4,177 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="stylesheet" href="styles.css">
   <title>About vivo | vivo Global</title>
 </head>
 
 <body>
-
-  <body>
-    <div class="public content">
-      <div class="brand-head-wrap">
-        <div class="head-img-box">
-          <picture class="no-flip-over">
-            <source srcset="//asia-exstatic.vivoglobal.com/static/bus/about-vivo/home/dist/img/banner-wap_3d18c80.png"
-              media="screen and (max-width: 768px)">
-            <img src="//asia-exstatic.vivoglobal.com/static/bus/about-vivo/home/dist/img/banner-pc_9ada762.jpg">
-          </picture>
+  <!-- Main content container with about class -->
+  <div class="about content">
+    <!-- Top Section -->
+    <div class="top-section">
+      <div class="top-img-box">
+        <!-- Responsive image with source set -->
+        <picture class="section">
+          <source srcset="//asia-exstatic.vivoglobal.com/static/bus/about-vivo/home/dist/img/banner-wap_3d18c80.png"
+            media="screen and (max-width: 768px)">
+          <img src="//asia-exstatic.vivoglobal.com/static/bus/about-vivo/home/dist/img/banner-pc_9ada762.jpg"
+            alt="Top Banner Image">
+        </picture>
+      </div>
+      <div class="top-content-box">
+        <!-- Title, auxiliary title, and learn more link -->
+        <p class="title section">Enjoy the extraordinary</p>
+        <div class="auxiliaryTitle section">Create extraordinary for consumers with technology and fashion at all times
         </div>
-        <div class="head-content-box">
-          <p class="title no-flip-over">Enjoy the extraordinary</p>
-          <div class="auxiliaryTitle no-flip-over">Create extraordinary for consumers with technology and fashion at all
-            times</div>
-          <a class="link link-vivo" href="https://www.vivo.com/en/about-vivo/culture"
-            data-name="Enjoy the extraordinary">
-            <span class="no-flip-over">Learn more</span>
+        <a class="link link-vivo" href="https://www.vivo.com/en/about-vivo/culture" data-name="Enjoy the extraordinary">
+          <span class="section">Learn more</span>
+        </a>
+      </div>
+    </div>
+
+    <!-- Content Wrap -->
+    <div class="content-wrap margin-top">
+      <!-- News Wrap -->
+      <div class="news-wrap">
+        <div class="news-head">
+          <!-- News title, auxiliary title, and learn more link -->
+          <p class="news-title section"></p>
+          <p class="news-auxiliaryTitle section"></p>
+          <a class="news-link link link-vivo" href="/en/about-vivo/news">
+            <span class="section">Learn more</span>
           </a>
         </div>
+        <!-- News List -->
+        <ul>
+          <!-- News Item 1 -->
+          <li>
+            <a href="/en/about-vivo/news/visionplus-2024" style="opacity: 1; transform: translateY(0px);">
+              <div class="img-box">
+                <img class="section"
+                  src="https://asia-exstatic-vivofs.vivo.com/PSee2l50xoirPK7y/1700131267339/0d140b87af67050ff0d4ca488b136fec.jpg"
+                  alt="News Image 1">
+              </div>
+              <div class="content-box" style="opacity: 1; transform: translateY(0px);">
+                <div class="content-box-div">
+                  <!-- News content: type, title, date -->
+                  <p class="type section">vivo officially announced the start of the 2024 vivo VISION+ Mobile PhotoAwards
+                    (hereinafter referred to as "the Awards"), with submissions being accepted from now on. This year's
+                    Awards is co-organized by vivo and its global imaging partner ZEISS and the Awards has added a new
+                    "Macro" category.</p>
+                  <p class="title section">2024 vivo VISION+ Mobile PhotoAwards Now Launched</p>
+                  <p class="date section">November 13, 2023</p>
+                </div>
+              </div>
+            </a>
+          </li>
+          <!-- News Item 2 -->
+          <li>
+            <a href="/en/about-vivo/news/european-football-championship" style="opacity: 1; transform: translateY(0px);"
+              class="">
+              <div class="img-box">
+                <img class="section"
+                  src="https://asia-exstatic-vivofs.vivo.com/PSee2l50xoirPK7y/1699855565873/b72aaa2740de5b461c51fe7a09f1814a.jpg"
+                  alt="News Image 2">
+              </div>
+              <div class="content-box">
+                <div class="content-box-div">
+                  <!-- News content: type, title, date -->
+                  <p class="type section">vivo is thrilled to be joining global football fans at the highly anticipated
+                    UEFA EURO 2024TM, set to take place in Germany next summer.</p>
+                  <p class="title section">vivo to Celebrate UEFA EURO 2024™ with Football Fans Around the World
+                  </p>
+                  <p class="date section">November 13, 2023</p>
+                </div>
+              </div>
+            </a>
+          </li>
+          <!-- News Item 3 -->
+          <li>
+            <a href="/en/about-vivo/news/fos-13" style="opacity: 1; transform: translateY(0px);">
+              <div class="img-box">
+                <img class="section"
+                  src="https://asia-exstatic-vivofs.vivo.com/PSee2l50xoirPK7y/1666578416890/127d2bfc8c74b2ececf94de65e20e2e2.png"
+                  alt="News Image 3">
+              </div>
+              <div class="content-box">
+                <div class="content-box-div">
+                  <!-- News content: type, title, date -->
+                  <p class="type section">This new operating system brings new personalization options, security upgrades,
+                    and more easy-to-use features for a smoother, uninterrupted experience</p>
+                  <p class="title section">vivo Launches Funtouch OS 13 Based on Android 13 for Overseas Users</p>
+                  <p class="date section">SHENZHEN, Oct 24, 2022</p>
+                </div>
+              </div>
+            </a>
+          </li>
+          <!-- News Item 4 -->
+          <li>
+            <a href="/en/about-vivo/news/android-14" style="opacity: 1; transform: translateY(0px);">
+              <div class="img-box">
+                <img class="section"
+                  src="https://asia-exstatic-vivofs.vivo.com/PSee2l50xoirPK7y/1683772980721/dcc50623fa39701396b88b13f3b0f4c5.png"
+                  alt="News Image 4">
+              </div>
+              <div class="content-box">
+                <div class="content-box-div">
+                  <!-- News content: type, title, date -->
+                  <p class="type section">Global technology brand vivo today announced Android 14 Beta 1 will be available
+                    on vivo X90 Pro and iQOO 11 smartphones in Southeast Asia starting from May 11. The program provides
+                    vivo developers with early access to the latest Android experience, enabling them to try out
+                  <!-- News content: type, title, date -->
+                  <p class="type section">Global technology brand vivo today announced Android 14 Beta 1 will be available
+                    on vivo X90 Pro and iQOO 11 smartphones in Southeast Asia starting from May 11. The program provides
+                    vivo developers with early access to the latest Android experience, enabling them to try out the new
+                    features and improve the compatibility of their applications.</p>
+                  <p class="title section">vivo Releases Android 14 Beta Program for Developers on vivo X90 Pro
+                    and iQOO 11</p>
+                  <p class="date section">SHENZHEN, China, May 11, 2023</p>
+                </div>
+              </div>
+            </a>
+          </li>
+        </ul>
       </div>
 
-      <div class="content-wrap margin-top">
-        <div class="news-wrap">
-          <div class="news-head">
-            <p class="news-title no-flip-over"></p>
-            <p class="news-auxiliaryTitle no-flip-over"></p>
-            <a class="news-link link link-vivo" href="/en/about-vivo/news">
-              <span class="no-flip-over">Learn more</span>
-            </a>
+      <!-- Life at vivo Section -->
+      <div class="life-vivo">
+        <!-- Life at vivo Item 1 -->
+        <div>
+          <div class="img section">
+            <img src="https://asia-exstatic-vivofs.vivo.com/PSee2l50xoirPK7y/1543053148711/59c161fef6450ffbbc30c06a859ef04d.png"
+              alt="Life at vivo Image 1">
           </div>
-          <ul>
-            <li>
-              <a href="/en/about-vivo/news/visionplus-2024" style="opacity: 1; transform: translateY(0px);">
-                <div class="img-box">
-                  <img class="no-flip-over"
-                    src="https://asia-exstatic-vivofs.vivo.com/PSee2l50xoirPK7y/1700131267339/0d140b87af67050ff0d4ca488b136fec.jpg"
-                    alt="2024 vivo VISION+ Mobile PhotoAwards Now Launched">
-                </div>
-                <div class="content-box" style="opacity: 1; transform: translateY(0px);">
-                  <div class="content-box-div">
-                    <p class="type no-flip-over">vivo officially announced the start of the 2024 vivo VISION+ Mobile
-                      PhotoAwards (hereinafter referred to as "the Awards"), with submissions being accepted from now
-                      on. This year's Awards is co-organized by vivo and its global imaging partner ZEISS and the Awards
-                      has added a new "Macro" category.</p>
-                    <p class="title no-flip-over">2024 vivo VISION+ Mobile PhotoAwards Now Launched</p>
-                    <p class="date no-flip-over">November 13, 2023</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="/en/about-vivo/news/european-football-championship"
-                style="opacity: 1; transform: translateY(0px);" class="">
-                <div class="img-box">
-                  <img class="no-flip-over"
-                    src="https://asia-exstatic-vivofs.vivo.com/PSee2l50xoirPK7y/1699855565873/b72aaa2740de5b461c51fe7a09f1814a.jpg"
-                    alt="vivo to Celebrate UEFA EURO 2024™ with Football Fans Around the World">
-                </div>
-                <div class="content-box">
-                  <div class="content-box-div">
-                    <p class="type no-flip-over">vivo is thrilled to be joining global football fans at the highly
-                      anticipated UEFA EURO 2024TM, set to take place in Germany next summer.</p>
-                    <p class="title no-flip-over">vivo to Celebrate UEFA EURO 2024™ with Football Fans Around the World
-                    </p>
-                    <p class="date no-flip-over">November 13, 2023</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="/en/about-vivo/news/fos-13" style="opacity: 1; transform: translateY(0px);">
-                <div class="img-box">
-                  <img class="no-flip-over"
-                    src="https://asia-exstatic-vivofs.vivo.com/PSee2l50xoirPK7y/1666578416890/127d2bfc8c74b2ececf94de65e20e2e2.png"
-                    alt="vivo Launches Funtouch OS 13 Based on Android 13 for Overseas Users">
-                </div>
-                <div class="content-box">
-                  <div class="content-box-div">
-                    <p class="type no-flip-over">This new operating system brings new personalization options, security
-                      upgrades, and more easy-to-use features for a smoother, uninterrupted experience</p>
-                    <p class="title no-flip-over">vivo Launches Funtouch OS 13 Based on Android 13 for Overseas Users
-                    </p>
-                    <p class="date no-flip-over">SHENZHEN, Oct 24, 2022</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="/en/about-vivo/news/android-14" style="opacity: 1; transform: translateY(0px);">
-                <div class="img-box">
-                  <img class="no-flip-over"
-                    src="https://asia-exstatic-vivofs.vivo.com/PSee2l50xoirPK7y/1683772980721/dcc50623fa39701396b88b13f3b0f4c5.png"
-                    alt="android-14">
-                </div>
-                <div class="content-box">
-                  <div class="content-box-div">
-                    <p class="type no-flip-over">Global technology brand vivo today announced Android 14 Beta 1 will be
-                      available on vivo X90 Pro and iQOO 11 smartphones in Southeast Asia starting from May 11. The
-                      program provides vivo developers with early access to the latest Android experience, enabling them
-                      to try out the new features and improve the compatibility of their applications.</p>
-                    <p class="title no-flip-over">vivo Releases Android 14 Beta Program for Developers on vivo X90 Pro
-                      and iQOO 11</p>
-                    <p class="date no-flip-over">SHENZHEN, China, May 11, 2023</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-          </ul>
+          <div class="text">
+            <!-- Life at vivo content: title, sketch, learn more link -->
+            <p class="life-title section">Life at vivo</p>
+            <p class="life-sketch section">vivo provides space and resources for employees to grow and develop.</p>
+            <a class="link link-vivo" data-name="Life at vivo" href="/en/about-vivo/career/life-at-vivo"><span
+                class="section">Learn more</span></a>
+          </div>
         </div>
-        <div class="life-vivo">
-          <div>
-            <div class="img no-flip-over">
-              <img
-                src="https://asia-exstatic-vivofs.vivo.com/PSee2l50xoirPK7y/1543053148711/59c161fef6450ffbbc30c06a859ef04d.png">
-            </div>
-            <div class="text">
-              <p class="life-title no-flip-over">Life at vivo</p>
-              <p class="life-sketch no-flip-over">vivo provides space and resources for employees to grow and develop.
-              </p>
-              <a class="link link-vivo" data-name="Life at vivo" href="/en/about-vivo/career/life-at-vivo"><span
-                  class="no-flip-over">Learn more</span></a>
-            </div>
+        <!-- Life at vivo Item 2 -->
+        <div>
+          <div class="img section">
+            <img src="https://asia-exstatic-vivofs.vivo.com/PSee2l50xoirPK7y/1543053544861/196266f59cb5cb17a0e7ebeb726f50de.png"
+              alt="Life at vivo Image 2">
           </div>
-          <div>
-            <div class="img no-flip-over">
-              <img
-                src="https://asia-exstatic-vivofs.vivo.com/PSee2l50xoirPK7y/1543053544861/196266f59cb5cb17a0e7ebeb726f50de.png">
-            </div>
-            <div class="text">
-              <p class="life-title no-flip-over">Empower Your Future</p>
-              <p class="life-sketch no-flip-over">Work with talented people around the world and we provide customized
-                training for your career development.</p>
-              <a class="link link-vivo" data-name="Empower Your Future" href="/en/about-vivo/empower-your-future">
-                <span class="no-flip-over">Learn more</span>
-              </a>
-            </div>
+          <div class="text">
+            <!-- Life at vivo content: title, sketch, learn more link -->
+            <p class="life-title section">Empower Your Future</p>
+            <p class="life-sketch section">Work with talented people around the world and we provide customized
+              training for your career development.</p>
+            <a class="link link-vivo" data-name="Empower Your Future" href="/en/about-vivo/empower-your-future"><span
+                class="section">Learn more</span></a>
           </div>
         </div>
       </div>
     </div>
-    </div>
-    </a>
-    </li>
-    </ul>
-    </div>
-    </div>
-    </div>
-    </div>
-    </div>
-  </body>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+</body>
 
 </html>
