--- a/01Muzammil/vivo-exclusive-store/vivo-exclusive.html
+++ b/01Muzammil/vivo-exclusive-store/vivo-exclusive.html
@@ -6,6 +6,11 @@
     <title>Vivo Store Locations | vivo-India</title>
     <link rel="stylesheet" href="style-vivo-exclusive.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link
+    rel="icon"
+    href="//asia-exstatic.vivoglobal.com/static/favicon-vivo_0549efd.ico"
+    type="image/vnd.microsoft.icon"
+  />
 </head>
 <body>
     <!-- nav-common-start-->
@@ -48,14 +53,14 @@
         </div>
         <div class="sectionids">
           <ul class="sectionids-ul">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../../index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="e-store.html">E-Store</a></li>
             <li><a href="vivo-exclusive-store.html">vivo Exclusive store</a></li>
             <li><a href="community.html">Community</a></li>
-            <li><a href="support.html">Support</a></li>
+            <li><a href="../../krishna/support.html">Support</a></li>
             <li><a href="funtouch-os.html">Funtouch OS</a></li>
-            <li><a href="explore-vivo.html">Explore vivo</a></li>
+            <li><a href="../../suvansh/index.html">Explore vivo</a></li>
             <li><a href="index.html">iQOO</a></li>
           </ul>
         </div>
