--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>Document</title>
+    <link
+    rel="icon"
+    href="//asia-exstatic.vivoglobal.com/static/favicon-vivo_0549efd.ico"
+    type="image/vnd.microsoft.icon"
+  />
   </head>
 
   <body>
