added media querires for nav bar and fixed page linking

--- a/01Muzammil/vivo-exclusive-store/vivo-exclusive.html
+++ b/01Muzammil/vivo-exclusive-store/vivo-exclusive.html
@@ -54,7 +54,7 @@
         <div class="sectionids">
           <ul class="sectionids-ul">
             <li><a href="../../index.html">Home</a></li>
-            <li><a href="products.html">Products</a></li>
+            <li><a href="../../Abhijeet/vivoProduct.html">Products</a></li>
             <li><a href="e-store.html">E-Store</a></li>
             <li><a href="vivo-exclusive-store.html">vivo Exclusive store</a></li>
             <li><a href="community.html">Community</a></li>
