New Changes by Srijan

--- a/Srijan/e-store.html
+++ b/Srijan/e-store.html
@@ -109,7 +109,7 @@
    
     <div class="main-container-Estore">
         <nav class="navbar"
-        style="display: flex; flex-direction: row; width: 100%; position: fixed; overflow-y: hidden; flex-wrap: nowrap; text-decoration: none;">
+        style="display: flex; flex-direction: row; text-decoration: none; width: 100%; position: fixed; overflow-y: hidden; flex-wrap: nowrap; text-decoration: none;">
         <div class="logo-div">
             <a href><svg width="72" height="24" viewBox="0 0 103 28" version="1.1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink">
