made final changes to all

--- a/suvansh/index.html
+++ b/suvansh/index.html
@@ -11,6 +11,9 @@
   href="//asia-exstatic.vivoglobal.com/static/favicon-vivo_0549efd.ico"
   type="image/vnd.microsoft.icon"
 />
+<link rel="stylesheet" href="../01Muzammil/stylehome.css" />
+
+<script src="https://kit.fontawesome.com/25c81bc001.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -54,14 +57,14 @@
     </div>
     <div class="sectionids">
       <ul class="sectionids-ul">
-        <li><a href="../index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="../Abhijeet/vivoProduct.html">Products</a></li>
-        <li><a href="e-store.html">E-Store</a></li>
+        <li><a href="../Srijan/e-store.html">E-Store</a></li>
         <li><a href="../01Muzammil/vivo-exclusive-store/vivo-exclusive.html">vivo Exclusive store</a></li>
         <li><a href="community.html">Community</a></li>
         <li><a href="../krishna/support.html">Support</a></li>
         <li><a href="funtouch-os.html">Funtouch OS</a></li>
-        <li><a href="./index.html">Explore vivo</a></li>
+        <li><a href="../suvansh/index.html">Explore vivo</a></li>
         <li><a href="index.html">iQOO</a></li>
       </ul>
     </div>
@@ -103,6 +106,9 @@
             </svg></a>
         </li>
       </ul>
+    </div>
+    <div class="bars-icons">
+      <i class="fa-solid fa-bars"></i>
     </div>
   </nav>
   <!-- nav-common-end -->
