--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <ul class="sectionids-ul">
           <li><a href="index.html">Home</a></li>
           <li><a href="./Abhijeet/vivoProduct.html">Products</a></li>
-          <li><a href="./Srijan/e-store.html">E-Store</a></li>
+          <li><a href="./srijan/e-store.html">E-Store</a></li>
           <li><a href="./01Muzammil/vivo-exclusive-store/vivo-exclusive.html">vivo Exclusive store</a></li>
           <li><a href="community.html">Community</a></li>
           <li><a href="./krishna/support.html">Support</a></li>
