some changes have been done

--- a/krishna/support.html
+++ b/krishna/support.html
@@ -507,6 +507,8 @@
         </section>
       </section>
     </main>
+    <div class="for-height">
+    </div>
     <!-- support section end -->
     <footer>
       <div class="upper-text">
