ReadMe Files Added

--- a/srijan/e-store.html
+++ b/srijan/e-store.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../01Muzammil/stylehome.css" />
+    <link rel="stylesheet" href="e-store.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>Document</title>
@@ -124,6 +125,14 @@
         }
         .col-md-3{
             overflow-y: hidden !important;
+        }
+        .footer-attributes a{
+            text-decoration: none;
+            font-size: 0.8rem;
+        }
+        .footer-attributes h4{
+            text-decoration: none;
+            font-size: 1.1rem;
         }
     </style>
 </head>
@@ -1360,12 +1369,12 @@
         <!------------------------------------------Expert Reviews---------------------------------------------->
         <div style="width:80%; margin: auto;">
             <div class="row">
-                <div class="col-sm-12" style="font-size: 26px;
-                color: #823131;
+                <h1 class="col-sm-6 thick-font" style="
+                color: #140202;
                 line-height: 34px;
-                height: 34px;">
-                    New Arrival
-                </div>
+                height: 34px;overflow-y: hidden;">
+                    Expert Reviews
+                </h1>
             </div>
             <div id="carouselExampleIndicators" class="carousel slide my-5 mt-2" data-bs-ride="carousel">
                 <div class="carousel-indicators">
