--- a/suvansh/index.html
+++ b/suvansh/index.html
@@ -56,12 +56,12 @@
       </div>
       <div class="sectionids">
         <ul class="sectionids-ul">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="./Abhijeet/vivoProduct.html">Products</a></li>
-          <li><a href="./srijan/e-store.html">E-Store</a></li>
-          <li><a href="./01Muzammil/vivo-exclusive-store/vivo-exclusive.html">vivo Exclusive store</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="../Abhijeet/vivoProduct.html">Products</a></li>
+          <li><a href="../srijan/e-store.html">E-Store</a></li>
+          <li><a href="../01Muzammil/vivo-exclusive-store/vivo-exclusive.html">vivo Exclusive store</a></li>
           <li><a href="community.html">Community</a></li>
-          <li><a href="./krishna/support.html">Support</a></li>
+          <li><a href="../krishna/support.html">Support</a></li>
           <li><a href="funtouch-os.html">Funtouch OS</a></li>
           <li><a href="./suvansh/index.html">Explore vivo</a></li>
           <li><a href="index.html">iQOO</a></li>
