--- a/krishna/support.html
+++ b/krishna/support.html
@@ -69,7 +69,7 @@
         <ul class="sectionids-ul">
           <li><a href="../index.html">Home</a></li>
           <li><a href="../Abhijeet/vivoProduct.html">Products</a></li>
-          <li><a href="../Srijan/e-store.html">E-Store</a></li>
+          <li><a href="../srijan/e-store.html">E-Store</a></li>
           <li>
             <a href="../01Muzammil/vivo-exclusive-store/vivo-exclusive.html"
               >vivo Exclusive store</a
